[gd_scene load_steps=4 format=3 uid="uid://menu123"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_menu"]
[ext_resource type="Script" path="res://ui/ui_sounds.gd" id="2_sounds"]
[ext_resource type="Texture2D" path="res://ui/assets/zhazhda-speed.png" id="3_bg"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bg")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.15)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -350.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="VBox"]
visible = false
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Продолжить"

[node name="StartButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.5, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 42
text = "▶ СТАРТ"

[node name="ControlsButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "⚙ УПРАВЛЕНИЕ"

[node name="SettingsButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Настройки"

[node name="QuitButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "✕ ВЫХОД"

[node name="ControlsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="ControlsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Управление"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ControlsPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Controls" type="Label" parent="ControlsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "↑ ↓ ← → - Управление машиной
Пробел - Ручной тормоз

C - Переключение камеры
F - Режим свободного полёта

В режиме полёта:
WASD - Движение
Q/E - Вниз/Вверх
Shift - Быстро

Мышь - Вращение камеры
Колёсико - Зум
Escape - Меню"

[node name="Spacer2" type="Control" parent="ControlsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="ControlsPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Назад"

[node name="LoadingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="LoadingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="LoadingPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Загрузка..."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="LoadingPanel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="LoadingPanel/VBox"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="LoadingPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Загрузка карты..."
horizontal_alignment = 1

[node name="LocationPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="LocationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="LocationPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Выберите локацию"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="LocationPanel/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="CherepovetsButton" type="Button" parent="LocationPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Череповец"

[node name="MoscowButton" type="Button" parent="LocationPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Москва (Отрадное)"

[node name="TbilisiButton" type="Button" parent="LocationPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Тбилиси (Важа-Пшавела)"

[node name="DubaiButton" type="Button" parent="LocationPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Дубай (Крик)"

[node name="Spacer2" type="Control" parent="LocationPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="LocationPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Назад"

[connection signal="pressed" from="VBox/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBox/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBox/ControlsButton" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBox/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBox/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ControlsPanel/VBox/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="LocationPanel/VBox/CherepovetsButton" to="." method="_on_cherepovets_pressed"]
[connection signal="pressed" from="LocationPanel/VBox/MoscowButton" to="." method="_on_moscow_pressed"]
[connection signal="pressed" from="LocationPanel/VBox/TbilisiButton" to="." method="_on_tbilisi_pressed"]
[connection signal="pressed" from="LocationPanel/VBox/DubaiButton" to="." method="_on_dubai_pressed"]
[connection signal="pressed" from="LocationPanel/VBox/BackButton" to="." method="_on_location_back_pressed"]
[connection signal="toggled" from="SettingsPanel/VBox/NightModeCheck" to="." method="_on_night_mode_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/RainCheck" to="." method="_on_rain_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/UnderglowCheck" to="." method="_on_underglow_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/SSRCheck" to="." method="_on_ssr_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/FogCheck" to="." method="_on_fog_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/GlowCheck" to="." method="_on_glow_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/SSAOCheck" to="." method="_on_ssao_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/NormalMapsCheck" to="." method="_on_normal_maps_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/CloudsCheck" to="." method="_on_clouds_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/TAACheck" to="." method="_on_taa_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/FXAACheck" to="." method="_on_fxaa_toggled"]
[connection signal="item_selected" from="SettingsPanel/VBox/MSAAOption" to="." method="_on_msaa_selected"]
[connection signal="toggled" from="SettingsPanel/VBox/DOFCheck" to="." method="_on_dof_toggled"]
[connection signal="toggled" from="SettingsPanel/VBox/VignetteCheck" to="." method="_on_vignette_toggled"]
[connection signal="value_changed" from="SettingsPanel/VBox/RenderDistBox/RenderDistSlider" to="." method="_on_render_dist_changed"]
[connection signal="pressed" from="SettingsPanel/VBox/ApplyButton" to="." method="_on_apply_settings_pressed"]
[connection signal="pressed" from="SettingsPanel/VBox/BackButton" to="." method="_on_settings_back_pressed"]

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -450.0
offset_right = 350.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 20.0
offset_right = -30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Настройки"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NightModeCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "Ночной режим (N)"

[node name="RainCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "Дождь (R)"

[node name="UnderglowCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = false
text = "Неон под машиной (G)"

[node name="GraphicsLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Графика"
horizontal_alignment = 1

[node name="SSRCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "SSR (отражения)"

[node name="FogCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "Туман"

[node name="GlowCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "Свечение (Glow)"

[node name="SSAOCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "SSAO"

[node name="NormalMapsCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "Normal Maps"

[node name="CloudsCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "Облака"

[node name="AALabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Антиалиасинг"
horizontal_alignment = 1

[node name="TAACheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "TAA"

[node name="FXAACheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = true
text = "FXAA"

[node name="MSAAOption" type="OptionButton" parent="SettingsPanel/VBox"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "MSAA: OFF"
popup/item_1/text = "MSAA: 2X"
popup/item_1/id = 1
popup/item_2/text = "MSAA: 4X"
popup/item_2/id = 2

[node name="EffectsLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Эффекты"
horizontal_alignment = 1

[node name="DOFCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = false
text = "Глубина резкости (DOF)"

[node name="VignetteCheck" type="CheckButton" parent="SettingsPanel/VBox"]
layout_mode = 2
button_pressed = false
text = "Виньетка"

[node name="RenderDistLabel" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Дальность прорисовки"

[node name="RenderDistBox" type="HBoxContainer" parent="SettingsPanel/VBox"]
layout_mode = 2

[node name="RenderDistSlider" type="HSlider" parent="SettingsPanel/VBox/RenderDistBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 100.0
max_value = 800.0
step = 50.0
value = 600.0

[node name="RenderDistValue" type="Label" parent="SettingsPanel/VBox/RenderDistBox"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "600 м"

[node name="Spacer2" type="Control" parent="SettingsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ApplyButton" type="Button" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Применить"

[node name="BackButton" type="Button" parent="SettingsPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Назад"

[node name="UISounds" type="Node" parent="."]
script = ExtResource("2_sounds")
